service/minio/k8s/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-upload-limit-2gb
  namespace: bao-staging-env
spec:
  buffering:
    maxRequestBodyBytes: 2147483648
    maxResponseBodyBytes: 2147483648
    memRequestBodyBytes: 0
    memResponseBodyBytes: 0
    retryExpression: "IsNetworkError()"
