service/minio/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gau-minio-service
  namespace: bao-staging-env
  labels:
    app: bao-platform
    env: staging
spec:
  type: ClusterIP
  selector:
    app: gau-minio-service
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
